--- a/data/config.json
+++ b/data/config.json
@@ -1,18 +1,26 @@
 {
   "departments": {
-    "it": "data/it.json",
-    "hr": "data/hr.json"
+    "msc": "data/msc.json",
+    "fin": "data/fin.json",
+    "mkt": "data/mkt.json",
+    "people": "data/people.json"
   },
   "titles": {
-    "it": "IT部门工具导航",
-    "hr": "HR部门工具导航"
+    "msc": "MSC部门工具导航",
+    "fin": "FIN部门工具导航",
+    "mkt": "MKT部门工具导航",
+    "people": "People Team部门工具导航"
   },
   "icons": {
-    "it": "💻",
-    "hr": "👥"
+    "msc": "🚚",
+    "fin": "💰",
+    "mkt": "📱",
+    "people": "👤"
   },
   "descriptions": {
-    "it": "技术开发、系统维护相关工具",
-    "hr": "人力资源管理相关工具"
+    "msc": "物流部门相关工具",
+    "fin": "财务部门相关工具",
+    "mkt": "市场部门相关工具",
+    "people": "人事部门相关工具"
   }
 }
